--- a/index.html
+++ b/index.html
@@ -136,10 +136,25 @@
       </div>
     </main>
 
-    <aside class="go-to-top-and-bottom-button js-go-top-and-bottom-button">
+    <div class="go-to-top-and-bottom-button js-go-top-and-bottom-button">
       <div class="go-to-top-and-bottom-button__arrow"></div>
-    </aside>
-    <aside class="trash-box js-trash-box"></aside>
+    </div>
+    <div class="trash-box js-trash-box"></div>
+    <div class="submit-message submit-message--success hidden js-submit-success-message">
+      <img src="./blocks/submit-message/img/success.svg"
+          alt=""
+          class="submit-message__img"
+          width="20px" height="20px">
+      <p class="submit-message__text submit-message__text--success">Card was saved!</p>
+    </div>
+
+    <div class="submit-message submit-message--error hidden js-submit-error-message">
+      <img src="./blocks/submit-message/img/error.svg"
+          alt=""
+          class="submit-message__img"
+          width="28px" height="20px">
+      <p class="submit-message__text submit-message__text--error">Card wasn't saved!</p>
+    </div>
     <script type="module" src="./scripts/main.js"></script>
   </body>
 </html>
