feat: make 'submit-messages' appear and disappear using setinterval

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
       <div class="go-to-top-and-bottom-button__arrow"></div>
     </div>
     <div class="trash-box js-trash-box"></div>
-    <div class="submit-message submit-message--success hidden js-submit-success-message">
+    <div class="submit-message submit-message--success js-submit-success-message">
       <img src="./blocks/submit-message/img/success.svg"
           alt=""
           class="submit-message__img"
@@ -148,7 +148,7 @@
       <p class="submit-message__text submit-message__text--success">Card was saved!</p>
     </div>
 
-    <div class="submit-message submit-message--error hidden js-submit-error-message">
+    <div class="submit-message submit-message--error js-submit-error-message">
       <img src="./blocks/submit-message/img/error.svg"
           alt=""
           class="submit-message__img"
