--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
     <section class="container">
       <div class="slide slide--slide-intro">
         <div class="slide__inner slide__inner--slide-intro">
-          <h1 class="slide__title slide__title--slide-intro">Know it all</h1>
+          <picture>
+            <source srcset="./src/img/know-it-all-title.webp" media="(min-width: 321px)" type="image/webp">
+            <img src="./src/img/know-it-all-title.png" alt="Know it all">
+          </picture>
           <div class="form-holder">
             <form class="add-card-form js-cardForm"
                   name="addNewCardForm"
