feat: add 'filter' picture to the 'filter' slide

--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
     <section class="container container--slide-filter">
       <div class="slide slide--slide-filter js-filter">
         <div class="slide__inner slide__inner--slide-filter">
+          <picture>
+            <source srcset="./src/img/know-it-all-filter-320-80.webp" media="(min-width: 321px)" type="image/webp">
+            <img src="./src/img/know-it-all-filter-320-80.png" alt="">
+          </picture>
           <input class="filter__search js-filter-search"
                       name="filtered-text"
                       type="text"
