--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
     <section class="container">
       <div class="slide slide--slide-intro">
         <div class="slide__inner slide__inner--slide-intro">
-          <picture>
-            <source srcset="./src/img/know-it-all-title.webp" media="(min-width: 321px)" type="image/webp">
-            <img src="./src/img/know-it-all-title.png" alt="Know it all">
-          </picture>
+          <div class="section-title-picture">
+            <picture>
+              <source srcset="./src/img/know-it-all-title.webp" media="(min-width: 321px)" type="image/webp">
+              <img src="./src/img/know-it-all-title.png" alt="Know it all">
+            </picture>
+          </div>
           <div class="form-holder">
             <form class="add-card-form js-cardForm"
                   name="addNewCardForm"
@@ -70,10 +72,12 @@
     <section class="container container--slide-filter">
       <div class="slide slide--slide-filter js-filter">
         <div class="slide__inner slide__inner--slide-filter">
-          <picture>
-            <source srcset="./src/img/know-it-all-filter-320-80.webp" media="(min-width: 321px)" type="image/webp">
-            <img src="./src/img/know-it-all-filter-320-80.png" alt="">
-          </picture>
+          <div class="section-title-picture">
+            <picture class = "section-title-picture">
+              <source srcset="./src/img/know-it-all-filter-320-80.webp" media="(min-width: 321px)" type="image/webp">
+              <img src="./src/img/know-it-all-filter-320-80.png" alt="">
+            </picture>
+          </div>
           <input class="filter__search js-filter-search"
                       name="filtered-text"
                       type="text"
@@ -126,6 +130,12 @@
 
     <main class="container container--slide-cards">
       <div class="slide slide--slide-cards">
+        <div class="section-title-picture">
+          <picture class = "section-title-picture">
+            <source srcset="./src/img/know-it-all-cards-320-80.webp" media="(min-width: 321px)" type="image/webp">
+            <img src="./src/img/know-it-all-cards-320-80.png" alt="Know it all">
+          </picture>  
+        </div>
         <div class="slide__inner slide__inner--slide-cards js-cards-holder">
           <div class="single-card-holder js-single-card-holder">
             <div class="single-card-preloader">
@@ -139,6 +149,15 @@
         </div>
       </div>
     </main>
+
+    <footer class="container container--footer">
+      <div class="section-title-picture">
+        <picture class = "section-title-picture">
+          <source srcset="./src/img/know-it-all-authors-320-80.webp" media="(min-width: 321px)" type="image/webp">
+          <img src="./src/img/know-it-all-authors-320-80.png" alt="Know it all : authors">
+        </picture>    
+      </div>
+    </footer>
 
     <div class="go-to-top-and-bottom-button js-go-top-and-bottom-button">
       <div class="go-to-top-and-bottom-button__arrow"></div>
