feat: align dooter background and remove needless wrapper

--- a/index.html
+++ b/index.html
@@ -19,12 +19,10 @@
     <section class="container">
       <div class="slide slide--slide-intro">
         <div class="slide__inner slide__inner--slide-intro">
-          <div class="section-title-picture">
-            <picture>
-              <source srcset="./src/img/know-it-all-title.webp" media="(min-width: 321px)" type="image/webp">
-              <img src="./src/img/know-it-all-title.png" alt="Know it all">
-            </picture>
-          </div>
+          <picture>
+            <source srcset="./src/img/know-it-all-title.webp" media="(min-width: 321px)" type="image/webp">
+            <img src="./src/img/know-it-all-title.png" alt="Know it all">
+          </picture>
           <div class="form-holder">
             <form class="add-card-form js-cardForm"
                   name="addNewCardForm"
@@ -72,12 +70,10 @@
     <section class="container container--slide-filter">
       <div class="slide slide--slide-filter js-filter">
         <div class="slide__inner slide__inner--slide-filter">
-          <div class="section-title-picture">
-            <picture class = "section-title-picture">
-              <source srcset="./src/img/know-it-all-filter-320-80.webp" media="(min-width: 321px)" type="image/webp">
-              <img src="./src/img/know-it-all-filter-320-80.png" alt="">
-            </picture>
-          </div>
+          <picture class = "section-title-picture">
+            <source srcset="./src/img/know-it-all-filter-320-80.webp" media="(min-width: 321px)" type="image/webp">
+            <img src="./src/img/know-it-all-filter-320-80.png" alt="">
+          </picture>
           <input class="filter__search js-filter-search"
                       name="filtered-text"
                       type="text"
@@ -130,12 +126,10 @@
 
     <main class="container container--slide-cards">
       <div class="slide slide--slide-cards">
-        <div class="section-title-picture">
-          <picture class = "section-title-picture">
-            <source srcset="./src/img/know-it-all-cards-320-80.webp" media="(min-width: 321px)" type="image/webp">
-            <img src="./src/img/know-it-all-cards-320-80.png" alt="Know it all">
-          </picture>  
-        </div>
+        <picture class = "section-title-picture">
+          <source srcset="./src/img/know-it-all-cards-320-80.webp" media="(min-width: 321px)" type="image/webp">
+          <img src="./src/img/know-it-all-cards-320-80.png" alt="Know it all">
+        </picture>  
         <div class="slide__inner slide__inner--slide-cards js-cards-holder">
           <div class="single-card-holder js-single-card-holder">
             <div class="single-card-preloader">
@@ -151,11 +145,16 @@
     </main>
 
     <footer class="container container--footer">
-      <div class="section-title-picture">
+      <div class="slide slide--slide-footer">
         <picture class = "section-title-picture">
           <source srcset="./src/img/know-it-all-authors-320-80.webp" media="(min-width: 321px)" type="image/webp">
           <img src="./src/img/know-it-all-authors-320-80.png" alt="Know it all : authors">
-        </picture>    
+        </picture>
+        <div class="slide__inner slide__inner--footer">
+          <div class="single-author">
+            
+          </div>
+        </div> 
       </div>
     </footer>
 
