feat: add autors slide

--- a/index.html
+++ b/index.html
@@ -150,9 +150,43 @@
           <source srcset="./src/img/know-it-all-authors-320-80.webp" media="(min-width: 321px)" type="image/webp">
           <img src="./src/img/know-it-all-authors-320-80.png" alt="Know it all : authors">
         </picture>
-        <div class="slide__inner slide__inner--footer">
+        <div class="slide__inner slide__inner--slide-footer">
           <div class="single-author">
-            
+            <picture class = "single-author__picture">
+              <source srcset="./src/img/know-it-all-author-64-64.svg" media="(min-width: 321px)" type="image/svg+xml">
+              <img src="./src/img/know-it-all-author-64-64.png" alt="">
+            </picture>
+            <div class="single-author__info">
+              <p class="single-author__name">Ivan Postarnak</p>
+              <div class="single-author__links-wrapper">
+                <a href="https://vk.com/ivanpostarnak"
+                   target="blank" 
+                   class="single-author__link-item">
+                   <img src="./src/img/vk-icon.svg" alt="" class="single-author__icon">
+                </a>
+                <a href="https://github.com/IvanPostarnak"
+                   target="blank" 
+                   class="single-author__link-item">
+                   <img src="./src/img/github-icon.svg" alt="" class="single-author__icon">
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="single-author">
+            <picture class = "single-author__picture">
+              <source srcset="./src/img/know-it-all-author-64-64.svg" media="(min-width: 321px)" type="image/svg+xml">
+              <img src="./src/img/know-it-all-author-64-64.png" alt="">
+            </picture>
+            <div class="single-author__info">
+              <p class="single-author__name">Sam Postarnak</p>
+              <div class="single-author__links-wrapper">
+                <a href="https://vk.com/id279842056"
+                   target="blank" 
+                   class="single-author__link-item">
+                   <img src="./src/img/vk-icon.svg" alt="" class="single-author__icon">
+                </a>
+              </div>
+            </div>
           </div>
         </div> 
       </div>
