feat: add @media queries and make design adaptive

--- a/index.html
+++ b/index.html
@@ -124,16 +124,10 @@
                 </label>
               </div>
             </div>
+          </div>
+          <div class="filter__controls">
             <button class="filter__reset-filter-button js-reset-filter-button">Reset filter</button>
-            <div class="filter__cards-counter js-filter-cards-counter">
-              <div class="filter__cards-counter-preloader">
-                <div class="loadingio-spinner-pulse-ckjnjglaokr">
-                  <div class="ldio-l70we991ur">
-                    <div></div><div></div><div></div>
-                  </div>
-                </div>
-              </div>
-            </div>
+            <div class="filter__cards-counter js-filter-cards-counter"></div>
           </div>
         </div>
       </div>
