fix: change <picture> tag of logo to <img> (needs becoming scalable)

--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
     <section class="container">
       <div class="slide slide--slide-intro">
         <div class="slide__inner slide__inner--slide-intro">
-          <picture>
-            <source srcset="./src/img/know-it-all-title.webp" media="(min-width: 321px)" type="image/webp">
-            <img src="./src/img/know-it-all-title.png" alt="Know it all">
-          </picture>
+          <div class="slide__logo-holder">
+            <img class="slide__logo"
+                 srcset=""
+                 src="./src/img/know-it-all-title.png" alt="Know it all">
+          </div>
           <div class="form-holder">
             <form class="add-card-form js-cardForm"
                   name="addNewCardForm"
